tests/ui/attributes/args-checked.stderr
error[E0539]: malformed `inline` attribute input
  --> $DIR/args-checked.rs:1:1
   |
LL | #[inline(always = 5)]
   | ^^^^^^^^^----------^^
   |          |
   |          valid arguments are `always` or `never`
   |
   = note: for more information, visit <https://doc.rust-lang.org/reference/attributes/codegen.html#the-inline-attribute>
help: try changing it to one of the following valid forms of the attribute
   |
LL - #[inline(always = 5)]
LL + #[inline(always)]
   |
LL - #[inline(always = 5)]
LL + #[inline(never)]
   |
LL - #[inline(always = 5)]
LL + #[inline]
   |

error[E0539]: malformed `inline` attribute input
  --> $DIR/args-checked.rs:3:1
   |
LL | #[inline(always(x, y, z))]
   | ^^^^^^^^^---------------^^
   |          |
   |          valid arguments are `always` or `never`
   |
   = note: for more information, visit <https://doc.rust-lang.org/reference/attributes/codegen.html#the-inline-attribute>
help: try changing it to one of the following valid forms of the attribute
   |
LL - #[inline(always(x, y, z))]
LL + #[inline(always)]
   |
LL - #[inline(always(x, y, z))]
LL + #[inline(never)]
   |
LL - #[inline(always(x, y, z))]
LL + #[inline]
   |

error[E0539]: malformed `instruction_set` attribute input
  --> $DIR/args-checked.rs:5:1
   |
LL | #[instruction_set(arm::a32 = 5)]
   | ^^^^^^^^^^^^^^^^^^------------^^
   | |                 |
   | |                 valid arguments are `arm::a32` or `arm::t32`
   | help: must be of the form: `#[instruction_set(set)]`
   |
   = note: for more information, visit <https://doc.rust-lang.org/reference/attributes/codegen.html#the-instruction_set-attribute>

error[E0539]: malformed `instruction_set` attribute input
  --> $DIR/args-checked.rs:7:1
   |
LL | #[instruction_set(arm::a32(x, y, z))]
   | ^^^^^^^^^^^^^^^^^^-----------------^^
   | |                 |
   | |                 valid arguments are `arm::a32` or `arm::t32`
   | help: must be of the form: `#[instruction_set(set)]`
   |
   = note: for more information, visit <https://doc.rust-lang.org/reference/attributes/codegen.html#the-instruction_set-attribute>

error: valid forms for the attribute are `#[macro_export(local_inner_macros)]` and `#[macro_export]`
  --> $DIR/args-checked.rs:13:1
   |
LL | #[macro_export(local_inner_macros = 5)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #57571 <https://github.com/rust-lang/rust/issues/57571>
   = note: `#[deny(invalid_macro_export_arguments)]` (part of `#[deny(future_incompatible)]`) on by default

error: valid forms for the attribute are `#[macro_export(local_inner_macros)]` and `#[macro_export]`
  --> $DIR/args-checked.rs:16:1
   |
LL | #[macro_export(local_inner_macros(x, y, z))]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #57571 <https://github.com/rust-lang/rust/issues/57571>

error: aborting due to 6 previous errors

For more information about this error, try `rustc --explain E0539`.
Future incompatibility report: Future breakage diagnostic:
error: valid forms for the attribute are `#[macro_export(local_inner_macros)]` and `#[macro_export]`
  --> $DIR/args-checked.rs:13:1
   |
LL | #[macro_export(local_inner_macros = 5)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #57571 <https://github.com/rust-lang/rust/issues/57571>
   = note: `#[deny(invalid_macro_export_arguments)]` (part of `#[deny(future_incompatible)]`) on by default

Future breakage diagnostic:
error: valid forms for the attribute are `#[macro_export(local_inner_macros)]` and `#[macro_export]`
  --> $DIR/args-checked.rs:16:1
   |
LL | #[macro_export(local_inner_macros(x, y, z))]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #57571 <https://github.com/rust-lang/rust/issues/57571>
   = note: `#[deny(invalid_macro_export_arguments)]` (part of `#[deny(future_incompatible)]`) on by default

